--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noah Anutta</title>
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/home.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/home.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <a href="index.html">Home</a>
-                <a href="work.html">Work</a>
-                <a href="learn.html">Learn</a>
-            </ul>
-        </nav>
+    <button class="menuButton">Menu</button>
+    <nav class="menu">
+        <ul class="navPages">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="learn.html">Learn</a></li>
+        </ul>
+        <div class="hr"></div>
+        <div class="navSocials">
+        <a href="https://www.instagram.com/noah_anutta/" target="_blank">Instagram</a>
+        <a href="https://www.linkedin.com/in/noah-anutta/" target="_blank">LinkedIn</a>
+        </div>
+    </nav>
     </header>
     <main>
-        <section class="home-banner">
-            <div class="banner-container">
-                <div class="underlay">
-                    <img src="/src/media/cabintrapped.jpg" alt="" class="if-br-80">
-                </div>
-                <div class="overlay">
-                    <p class="h1" data-splitting data-effectObf>Noah Anutta</p>
-                    <p class="subtext animFast" data-splitting data-effectObf>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, quia veritatis. Natus corporis beatae veniam earum culpa doloremque, aliquam impedit, voluptatibus quia eveniet a rem maxime, excepturi in quod quos?</p>
+      <section class="home-banner">
+        <div class="banner-container">
+          <div class="underlay">
+            <img src="/src/media/cabintrapped.jpg" alt="" class="if-br-70" />
+          </div>
+          <div class="overlay">
+            <h1 class="h1" data-splitting data-obfLoad>Noah Anutta</h1>
+            <p class="subtext">Empowering Brands Through Artful Web Development</p>
+          </div>
+        </div>
+      </section>
+      <section class="fodas-container">
+        <div class="content">
+          <p class="content__title fodas" data-splitting data-fizz-letters>
+            <span class="title-full">&quot;when you make something no one hates, <br>no one loves it.&quot;</span>
+          </p>
+          <p class="fodas author">-Tibor Kalman</p>
+        </div>
+      </section>
+      <section class="pd-d bg-p">
+        <div class="twocl-grid">
+            <div class="gc-container">
+                <div class="gc-content">
+                    <h2 class="h2">Just Make Something</h2>
+                    <p>I first discovered Tibor Kalman during my junior year at university, right after I switched my major from Computer Systems Engineering to Graphic Information Technology. His work captivated me, but it was one particular quote that truly resonated with me.</p>
+                    <p>For me, art and design isn't about following the rules or using an outline. We should all strive to create and embrace our own image. Whether it's what we write, illustrate, sing, or even code &mdash; our greatest strength is embracing our individuality.</p>
                 </div>
             </div>
-        </section>
-        <section class="page-width">
-            <div class="pageGrid">
-                <div class="grid-item">
-                    <!-- <div class="underlay">
-                        <img src="/src/media/site-1.jpg" alt="" class="if-br-80">
-                    </div> -->
-                    <div class="grid-item-content">
-                        <h2 class="h2">About Me</h2>
-                        <p>Hi, I'm <span class="emph">@noahanutta</span>.<br>I'm interested in Web Development, Graphic Design, and Music Production<br>I'm currently working in Web Development, specifically with the Shopify Plus platform.</p>
-                    </div>
+            <div class="gc-container">
+                <div class="sk-g">
+                    <img src="/src/media/cutout2-0.5.png" alt="">
                 </div>
-                <a href="work.html" class="grid-item">
-                    <!-- <div class="underlay">
-                        <img src="/src/media/site-2.jpg" alt="" class="if-br-80">
-                    </div> -->
-                    <div class="grid-item-content">
-                        <h2 class="h2">Work</h2>
-                        <p>My current and previous work.</p>
-                    </div>
-                </a>
-                <a href="learn.html" class="grid-item">
-                    <!-- <div class="underlay">
-                        <img src="/src/media/japan Colormetric 3.jpg" alt="" class="if-br-80">
-                    </div> -->
-                    <div class="grid-item-content">
-                        <h2 class="h2">Learn</h2>
-                        <p>Articles, Lessons, and Demos!</p>
-                    </div>
-                </a>
-                <a href="#" class="grid-item">
-                    <!-- <div class="underlay">
-                        <img src="/src/media/docfilmaker.jpg" alt="" class="if-br-80">
-                    </div> -->
-                    <div class="grid-item-content">
-                        <h2 class="h2">Travels</h2>
-                        <p>Check out my videos and photos!</p>
-                    </div>
-                </a>
             </div>
-        </section>
+        </div>
+      </section>
+      <section class="about-me">
+        <div class="content">
+            <h2 class="content__title" data-splitting data-scatter-flip>
+              <span class="about-me-title">About Me</span>
+            </h2>
+          </div>
+        <p class="subtext">Hi, I'm a web developer in Arizona with a focus on creating dynamic e-commerce sites using the Shopify ecosystem.</p>
+        <p class="subtext">My education in Computer Science, Web Development, and Graphic Design at ASU Polytechnic allows me to blend technical expertise with creative design. My work integrates this technical proficiency with a strong design sensibility, ensuring that each project not only meets but exceeds expectations.</p>
+        <p class="subtext">Outside of my professional life, I'm involved in music, photography, and videography. This, in turn, informs my creative approach to web design.</p>
+      </section>
     </main>
     <footer></footer>
-    <script type="module" src="js/index.js"></script>
-</body>
+    <div class="grain-overlay"></div>
+    <script src="js/index.js"></script>
+    <script type="module" src="js/text-animation.js"></script>
+  </body>
 </html>
